...
                    Image(.resistanceHelp)
                        .resizable()
                        .frame(width: 28, height: 28)
                        .background(Color.white)
                        .padding()
                }
                .accessibilityIdentifier("openColorCodeButton")

                VStack {
                    Spacer()
                    ResistanceText(
                        isFourbandResistance: viewModel.showing4BandResistance,
                        isPercentError: viewModel.showingPercentError,
...
                    } label: {
                        Image(viewModel.showing4BandResistance ?
                                .navigationResistance4 : .navigationResistance5)
                            .renderingMode(.template)
                            .foregroundColor(Color.black)
                    }
                    .accessibilityIdentifier("toggleBandCountButton")
                }
            }
            .navigationTitle("抵抗計算機")
            .navigationBarTitleDisplayMode(.inline)
        }
    }
...
